--- a/app/colors.scss
+++ b/app/colors.scss
@@ -1,4 +1,5 @@
-$orange: "#FF9514"; //Оранжевый
-  $black: "#111111"; //черный
-  $gray: "#575757"; //gray
-  $white: "#FFFFFF"; //white
+$orange: #FF9514; //Оранжевый
+  $black: #111111; //черный
+  $gray: #575757; //gray
+  $white: #FFFFFF; //white
+  $lightOrange: #FFA83D; //lightOrange
