--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,7 @@
+@font-face {
+  font-family: "Nekst";
+  src: url('/public/font/Nekst.ttf');
+}
 
 
 * {
@@ -10,8 +14,8 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  font-family: "Nekst", sans-serif;
 }
-
 
 a {
   color: inherit;
