--- a/app/colors.scss
+++ b/app/colors.scss
@@ -3,3 +3,4 @@ $orange: #FF9514; //Оранжевый
   $gray: #575757; //gray
   $white: #FFFFFF; //white
   $lightOrange: #FFA83D; //lightOrange
+  $lightGray: #F3F3F4; // lightGray
