--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -2,15 +2,5 @@
 .page {
     display: flex;
     flex-direction: column;
-    padding: 0px 48px;
-}
-.image_container {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    width: 100%;
-    height: 57vh;
-    background-color: black;
-    border-radius: 32px;
-    border: 1px solid black;
+    padding: 0px 48px 137px;
 }
