--- a/components/Input/input.module.scss
+++ b/components/Input/input.module.scss
@@ -3,11 +3,24 @@
 .input__template {
     display: flex;
     flex-direction: column;
+    width: 24.5vw;
 }
 
 .input{
-    border: none;
+    display: flex;
+    height: 50px;
+    width: 100%;
+    border: 1px solid #e6ecf5;
+    border-radius: 16px;
+    margin: 0 auto;
+    padding: 0px 10px;
+    font-size: 26px;
+    color: $gray;
+    background-color: $lightGray;
+&:focus{
+    border-color: $orange;
     outline: none;
+}
 }
 
 .input__range{
@@ -15,6 +28,7 @@
     outline: none;
     border: 1px solid $gray;
     appearance: none;
+    width: 90%;
     -webkit-appearance: none;
     &::-webkit-slider-thumb {
         -webkit-appearance: none;
